syntax = "proto3";

package auth;
option go_package = "tsu-self/proto/auth";

import "google/protobuf/timestamp.proto";

// ===== 登录相关 =====
message LoginRequest {
  string identifier = 1;  // 用户名或邮箱
  string password = 2;     // 密码
  string client_ip = 3;    // 客户端IP
  string user_agent = 4;   // 用户代理
}

message LoginResponse {
  bool success = 1;          // 登录是否成功
  string token = 2;          // 访问令牌
  string refresh_token = 3;  // 刷新令牌
  string identity_id = 4;    // Kratos 身份ID
  KratosUserInfo user_info = 5; // 用户信息
  int64 expires_in = 6;      // 令牌过期时间（秒）
  string error_message = 7;  // 错误信息
}

// ===== 注册相关 =====
message RegisterRequest {
  string email = 1;        // 邮箱
  string username = 2;     // 用户名
  string password = 3;     // 密码
  string client_ip = 4;    // 客户端IP
  string user_agent = 5;   // 用户代理
}

message RegisterResponse {
  bool success = 1;          // 注册是否成功
  string identity_id = 2;    // Kratos 身份ID
  string token = 3;          // 访问令牌
  string refresh_token = 4;  // 刷新令牌
  KratosUserInfo user_info = 5; // 用户信息
  string error_message = 6;  // 错误信息
}

// ===== Token 验证相关 =====
message ValidateTokenRequest {
  string token = 1;        // 要验证的令牌
}

message ValidateTokenResponse {
  bool valid = 1;            // 令牌是否有效
  string user_id = 2;        // 用户ID
  KratosUserInfo user_info = 3; // 用户信息
  repeated string permissions = 4; // 权限列表
  int64 expires_at = 5;      // 过期时间戳
}

// ===== 登出相关 =====
message LogoutRequest {
  string token = 1;          // 访问令牌
  string user_id = 2;        // 用户ID
}

message LogoutResponse {
  bool success = 1;          // 登出是否成功
  string error_message = 2;  // 错误信息
}

// ===== 权限检查相关 =====
message CheckPermissionRequest {
  string user_id = 1;        // 用户ID
  string resource = 2;       // 资源
  string action = 3;         // 动作
}

message CheckPermissionResponse {
  bool allowed = 1;          // 是否允许
}

// ===== 用户信息相关 =====
message GetUserInfoRequest {
  string user_id = 1;        // 用户ID
}

message GetUserInfoResponse {
  KratosUserInfo user_info = 1; // 用户信息
}

// ===== 更新用户特征相关 =====
message UpdateUserTraitsRequest {
  string user_id = 1;        // 用户ID
  string email = 2;          // 邮箱
  string username = 3;       // 用户名
}

message UpdateUserTraitsResponse {
  bool success = 1;          // 更新是否成功
  string error_message = 2;  // 错误信息
}

// ===== 角色管理相关 =====
message AssignRoleRequest {
  string user_id = 1;        // 用户ID
  string role = 2;           // 角色名
}

message AssignRoleResponse {
  bool success = 1;          // 分配是否成功
  string error_message = 2;  // 错误信息
}

message RevokeRoleRequest {
  string user_id = 1;        // 用户ID
  string role = 2;           // 角色名
}

message RevokeRoleResponse {
  bool success = 1;          // 撤销是否成功
  string error_message = 2;  // 错误信息
}

message CreateRoleRequest {
  string role_name = 1;      // 角色名
  repeated string permissions = 2; // 权限列表
}

message CreateRoleResponse {
  bool success = 1;          // 创建是否成功
  string error_message = 2;  // 错误信息
}

// ===== Kratos 用户信息 =====
message KratosUserInfo {
  string id = 1;             // 用户ID
  string email = 2;          // 邮箱
  string username = 3;       // 用户名
  google.protobuf.Timestamp created_at = 4; // 创建时间
  google.protobuf.Timestamp updated_at = 5; // 更新时间
  map<string, string> traits = 6; // 其他特征
}